# saq-k8s-watch

./: AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker_entrypoint.py  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml  docker-publish.yml
helm/saq-k8s-watch/: Chart.yaml  values.yaml
helm/saq-k8s-watch/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  serviceaccount.yaml
saq_k8s_watch/: __init__.py  cli.py  monitor.py  server.py
tests/: conftest.py  oom-worker.Dockerfile  test_kube_namespace.py  test_monitor_integration.py  test_monitor_label_selector.py  test_monitor_oom_integration.py  test_orphan_sweep.py  test_server.py
