[project]
name = "saq-k8s-watch"
version = "1.1.0"
description = "Kubernetes events monitor for SAQ worker/job recovery"
requires-python = ">=3.14"
dependencies = [
  "kubernetes-asyncio>=29.0.0",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.0",
  "saq[postgres]>=0.26.1",
  "typing-extensions>=4.12.2",
]

[project.scripts]
saq-k8s-watch = "saq_k8s_watch.cli:cli"

[project.optional-dependencies]
build = ["uv ~= 0.10.0"]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "redis>=5.0.0",
  "ruff>=0.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "saq_k8s_watch"
module-root = ""

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    sed -i "s/^version:.*/version: $NEW_VERSION/" helm/saq-k8s-watch/Chart.yaml
    sed -i "s/^appVersion:.*/appVersion: \\"$NEW_VERSION\\"/" helm/saq-k8s-watch/Chart.yaml
    git add helm/saq-k8s-watch/Chart.yaml
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
"""
